@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: iCal-Parser
-version: 1.07
+version: 1.08
 author:
   - Rick Frankel, cpan@rickster.com
 abstract: Parse iCalendar files into a data structure
@@ -16,5 +16,5 @@ build_requires:
 provides:
   iCal::Parser:
     file: lib/iCal/Parser.pm
-    version: 1.07
+    version: 1.08
 generated_by: Module::Build version 0.2606
