@@ -1,3 +1,7 @@
+2005-02-04  Rick Frankel  <rick@gg5.local>
+
+	* t/02parse.t: force explicit timezone for tests.
+
 2005-02-01  Rick Frankel  <rick@gg5.local>
 
 	* lib/iCal/Parser.pm: change date handling. added tz
